--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -3,6 +3,10 @@
         visibility: hidden;
         opacity: 0;
     }
+    // 1% {
+    //     visibility: visible;
+    //     opacity: 0;
+    // }
 
     to {
         visibility: visible;
