--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -19,6 +19,10 @@ dd {
     margin: 0;
 }
 
+h1, h2, h3 {
+    color: $dark-blue;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
@@ -38,6 +42,10 @@ body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
+
+    &.overflow-hidden {
+        overflow: hidden;
+    }
 }
 
 /* A elements that don't have a class get default styles */
