--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     font-size: $font-sm;
     font-weight: 700;
-    padding: 0.875rem 2rem;
+    padding: 0.75rem clamp(1.75rem, 3vw, 2rem);
     color: $white;
     border: 0;
     border-radius: 50px;
