--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
     &-image {
         position: relative;
+        z-index: -2;
         background-image: url(/images/bg-intro-mobile.svg);
         background-position: center;
         background-repeat: no-repeat;
@@ -10,6 +11,7 @@
         &::before {
             content: '';
             position: absolute;
+            z-index: -2;
             background-image: url(/images/image-mockups.png);
             background-position: center bottom 11%;
             background-repeat: no-repeat;
