--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+
     &-image {
         position: relative;
         z-index: -2;
@@ -18,6 +19,40 @@
             background-size: 95%;
             height: 100%;
             width: 100%;
+        }
+    }
+
+    &-text {
+        --flow-space: 1.5rem;
+        text-align: center;
+        padding: 2.25rem 1.5rem;
+
+        h1 {
+            font-size: 2.25rem;
+        }
+
+        button {
+            margin-top: 2.5rem;
+        }
+    }
+}
+
+@include breakpoint-up(medium) {
+    .hero {
+        display: flex;
+        min-height: 42.5rem;
+
+        &-image {
+            order: 2;
+            flex: 3;
+            background: 0;
+            background-image: url(/images/bg-intro-desktop.svg);
+            background-position: left 74%;
+        }
+
+        &-text {
+            flex: 2;
+            text-align: left;
         }
     }
 }
