--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,7 +1,7 @@
 /* Colors */
 /* Font-sizes */
 .container {
-  max-width: 75em;
+  max-width: 67.5em;
   margin-inline: auto;
 }
 
@@ -198,7 +198,7 @@ select {
   display: flex;
   gap: 1rem;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 5.5rem;
   left: 1.5rem;
   right: 1.5rem;
@@ -273,13 +273,16 @@ select {
 .header .overlay {
   visibility: hidden;
   position: fixed;
+  z-index: 1;
   inset: 3.75rem 0 0;
   background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
 }
 
+.hero {
+  background-color: hsl(0deg, 0%, 98%);
+}
 .hero-image {
   position: relative;
-  z-index: -2;
   background-image: url(/images/bg-intro-mobile.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -289,9 +292,8 @@ select {
 .hero-image::before {
   content: "";
   position: absolute;
-  z-index: -2;
   background-image: url(/images/image-mockups.png);
-  background-position: center bottom 11%;
+  background-position: center bottom 10%;
   background-repeat: no-repeat;
   background-size: 95%;
   height: 100%;
@@ -309,20 +311,46 @@ select {
   margin-top: 2.5rem;
 }
 
-@media (min-width: 40em) {
-  .hero {
+@media (min-width: 64em) {
+  .hero .container {
     display: flex;
     min-height: 42.5rem;
   }
   .hero-image {
     order: 2;
     flex: 3;
-    background: 0;
+    background-image: none;
+  }
+  .hero-image::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    background-image: url(/images/image-mockups.png);
+    background-repeat: no-repeat;
+    background-size: 95%;
+    height: 125%;
+    left: 22%;
+    width: 120%;
+    background-position: 80% 101%;
+  }
+  .hero-image::after {
+    content: "";
+    position: absolute;
     background-image: url(/images/bg-intro-desktop.svg);
-    background-position: left 74%;
+    width: 125%;
+    height: 100%;
+    background-size: 150%;
+    background-position: 3% 69%;
   }
   .hero-text {
     flex: 2;
     text-align: left;
+    align-self: center;
+  }
+  .hero-text h1 {
+    font-size: 3.25rem;
+  }
+  .hero-text p {
+    width: 42ch;
   }
 }/*# sourceMappingURL=styles.css.map */
