--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -9,6 +9,11 @@
     gap: var(--gap, 1rem);
 }
 
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
 .flow > * + * {
     margin-top: var(--flow-space, 1rem);
 }
