--- a/scss/styles.css
+++ b/scss/styles.css
@@ -10,6 +10,11 @@
   gap: var(--gap, 1rem);
 }
 
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .flow > * + * {
   margin-top: var(--flow-space, 1rem);
 }
@@ -365,4 +370,24 @@ select {
 }
 .features {
   background-color: hsl(220deg, 16%, 96%);
+  text-align: center;
+}
+.features p {
+  font-size: 0.875rem;
+}
+.features .container {
+  padding: 4rem 1.5rem;
+}
+.features-info {
+  gap: 2.25rem;
+}
+.features-item {
+  align-items: center;
+}
+.features-item .features-icon {
+  margin-bottom: 0.75rem;
+}
+.features-item .features-title {
+  color: hsl(233deg, 26%, 24%);
+  font-weight: 300;
 }/*# sourceMappingURL=styles.css.map */
