--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -50,6 +50,7 @@
         &-text {
             p {
                 width: 42ch;
+                margin-inline: auto;
             }
         }
     }
