--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -52,7 +52,7 @@
             position: relative;
             color: $grayish-blue;
             transition: color .3s ease-in-out;
-            @include breakpoint-down(small) {
+            @include breakpoint-down(medium) {
                 color: $dark-blue;
                 font-size: $font-med;
             }
