--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -19,13 +19,13 @@
 }
 
 .hide-for-mobile {
-    @include breakpoint-down(small) {
+    @include breakpoint-down(medium) {
         display: none;
     }
 }
 
 .hide-for-desktop {
-    @include breakpoint-up(medium) {
+    @include breakpoint-up(large) {
         display: none !important;
     }
 }
