--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -2,14 +2,19 @@
     background-color: $light-grayish-blue;
     text-align: center;
 
-    &-intro p {
-        margin-top: 1.25rem;
-        margin-bottom: 3.5rem;
+    &-intro {
+        h2 {
+            font-size: clamp(1.75rem, 3.5vw, 2.25rem);
+        }
+
+        p {
+            margin-top: 1.25rem;
+            margin-bottom: 3.5rem;
+        }
     }
 
     p {
         font-size: $font-sm;
-
     }
 
     .container {
@@ -38,6 +43,13 @@
 
 @include breakpoint-up(medium) {
     .features {
+
+        &-intro {
+            p {
+                margin-bottom: 4.5rem;
+            }
+        }
+
         &-info {
             flex-flow: row wrap;
         }
@@ -52,12 +64,24 @@
     .features {
         text-align: left;
 
+        &-intro {
+            p {
+                font-size: $font-med;
+                width: 60ch;
+                margin-top: 2rem;
+            }
+        }
+
         &-info {
-            flex-direction: row;
+            flex-flow: row nowrap;
         }
 
         &-item {
             align-items: start;
+
+            .features-title {
+                font-size: 1.375rem;
+            }
         }
     }
 }
