features section done

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -46,6 +46,7 @@
 
         &-intro {
             p {
+                font-size: 1rem;
                 margin-bottom: 4.5rem;
             }
         }
