--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -3,13 +3,11 @@
     text-align: center;
 
     &-intro {
-        h2 {
-            font-size: clamp(1.75rem, 3.5vw, 2.25rem);
-        }
+        margin-bottom: 3.5rem;
 
-        p {
-            margin-top: 1.25rem;
-            margin-bottom: 3.5rem;
+        h2 {
+            margin-bottom: 1.25rem;
+            font-size: clamp(1.75rem, 3.5vw, 2.25rem);
         }
     }
 
@@ -45,9 +43,11 @@
     .features {
 
         &-intro {
+            margin-bottom: 4.5rem;
+            
             p {
                 font-size: 1rem;
-                margin-bottom: 4.5rem;
+                
             }
         }
 
@@ -66,10 +66,14 @@
         text-align: left;
 
         &-intro {
+
+            h2 {
+                margin-bottom: 2rem;
+            }
+
             p {
                 font-size: $font-med;
                 width: 60ch;
-                margin-top: 2rem;
             }
         }
 
@@ -79,6 +83,10 @@
 
         &-item {
             align-items: start;
+
+            .features-icon {
+                margin-bottom: 1.5rem;
+            }
 
             .features-title {
                 font-size: 1.375rem;
