--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -1,15 +1,68 @@
 .articles {
     background-color: $very-light-gray;
+    line-height: 1.3;
+
+    h2 {
+        text-align: center;
+        margin-bottom: 1.75rem;
+
+        @include breakpoint-up(large) {
+            text-align: left;
+            margin-bottom: 3.25rem;
+        }
+    }
 
     .container {
         padding: clamp(4rem, 7vw, 6rem) 1.5rem;
     }
 
     &-wrapper {
-        // display: grid;
+        display: grid;
+        gap: 1.5rem;
+
+        @include breakpoint-up(medium) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include breakpoint-up(large) {
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+        }
     }
 
     &-item {
+        background-color: #FFF;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: 0 2px 10px lightgray;
+        transition: transform .15s ease-in-out;
 
+        &:hover {
+            transform: scale(1.05);
+        }
+
+        .articles-image {
+            height: 12rem;
+            background-position: center;
+            background-size: cover;
+        }
+
+        .articles-text {
+            --flow-space: .75rem;
+            padding: 1.5rem;
+
+            .articles-author {
+                font-size: .625rem;
+            }
+
+            .articles-title {
+                font-size: 1rem;
+                color: $dark-blue;
+            }
+
+            p {
+                font-size: .875rem;
+            }
+        }
     }
 }
