--- a/scss/styles.css
+++ b/scss/styles.css
@@ -145,6 +145,7 @@ a:not([class]) {
 
 a, a:visited, a:hover {
   text-decoration: none;
+  color: inherit;
 }
 
 /* Make images easier to work with */
@@ -400,9 +401,6 @@ select {
 }
 
 @media (min-width: 40em) {
-  .features-intro {
-    margin-bottom: 4.5rem;
-  }
   .features-intro p {
     font-size: 1rem;
   }
@@ -416,6 +414,9 @@ select {
 @media (min-width: 64em) {
   .features {
     text-align: left;
+  }
+  .features-intro {
+    margin-bottom: 4.5rem;
   }
   .features-intro h2 {
     margin-bottom: 2rem;
@@ -439,7 +440,62 @@ select {
 }
 .articles {
   background-color: hsl(0deg, 0%, 98%);
+  line-height: 1.3;
+}
+.articles h2 {
+  text-align: center;
+  margin-bottom: 1.75rem;
+}
+@media (min-width: 64em) {
+  .articles h2 {
+    text-align: left;
+    margin-bottom: 3.25rem;
+  }
 }
 .articles .container {
   padding: clamp(4rem, 7vw, 6rem) 1.5rem;
+}
+.articles-wrapper {
+  display: grid;
+  gap: 1.5rem;
+}
+@media (min-width: 40em) {
+  .articles-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 64em) {
+  .articles-wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+  }
+}
+.articles-item {
+  background-color: #FFF;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 2px 10px lightgray;
+  transition: transform 0.15s ease-in-out;
+}
+.articles-item:hover {
+  transform: scale(1.05);
+}
+.articles-item .articles-image {
+  height: 12rem;
+  background-position: center;
+  background-size: cover;
+}
+.articles-item .articles-text {
+  --flow-space: .75rem;
+  padding: 1.5rem;
+}
+.articles-item .articles-text .articles-author {
+  font-size: 0.625rem;
+}
+.articles-item .articles-text .articles-title {
+  font-size: 1rem;
+  color: hsl(233deg, 26%, 24%);
+}
+.articles-item .articles-text p {
+  font-size: 0.875rem;
 }/*# sourceMappingURL=styles.css.map */
