--- a/scss/styles.css
+++ b/scss/styles.css
@@ -190,7 +190,7 @@ select {
   border: 0;
   border-radius: 50px;
   background-image: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
 .cta-btn:hover {
   opacity: 0.6;
@@ -497,5 +497,89 @@ select {
   color: hsl(233deg, 26%, 24%);
 }
 .articles-item .articles-text p {
+  font-size: 0.875rem;
+}
+
+.footer {
+  background-color: hsl(233deg, 26%, 24%);
+}
+.footer .container {
+  --flow-space: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2.5rem;
+}
+@media (min-width: 64em) {
+  .footer .container {
+    --flow-space: 0;
+    padding-block: 3rem;
+    flex-direction: row;
+    gap: 7.25rem;
+  }
+}
+.footer-socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 64em) {
+  .footer-socials {
+    align-items: start;
+    gap: 3rem;
+  }
+}
+.footer-socials .logo {
+  display: inline-block;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 64em) {
+  .footer-socials .logo {
+    margin-bottom: 0;
+  }
+}
+.footer-socials .socials svg path {
+  transition: fill 0.15s ease-in-out;
+}
+.footer-socials .socials a:hover svg path {
+  fill: hsl(136deg, 65%, 51%);
+}
+@media (min-width: 64em) {
+  .footer-links {
+    display: flex;
+    gap: 7.25rem;
+  }
+}
+.footer-links div {
+  align-items: center;
+  gap: 0.5rem;
+}
+@media (min-width: 64em) {
+  .footer-links div {
+    align-items: start;
+  }
+}
+.footer-links a {
+  font-size: 0.875rem;
+  font-weight: 300;
+  color: white;
+  line-height: 2.25;
+  transition: color 0.15s ease-in-out;
+}
+.footer-links a:hover {
+  color: hsl(136deg, 65%, 51%);
+}
+.footer-cta {
+  align-items: center;
+  gap: 1.5rem;
+}
+@media (min-width: 64em) {
+  .footer-cta {
+    margin-left: auto;
+    align-items: end;
+    gap: 2rem;
+  }
+}
+.footer-cta .copyright {
   font-size: 0.875rem;
 }/*# sourceMappingURL=styles.css.map */
