--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -58,6 +58,11 @@
             .articles-title {
                 font-size: 1rem;
                 color: $dark-blue;
+                transition: color .15s ease-in-out;
+
+                &:hover {
+                    color: $lime-green;
+                }
             }
 
             p {
