--- a/scss/styles.css
+++ b/scss/styles.css
@@ -342,7 +342,7 @@ select {
     content: "";
     position: absolute;
     z-index: 1;
-    background-image: url(/images/image-mockups.png);
+    background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
     background-repeat: no-repeat;
     background-size: 93%;
     height: 124%;
@@ -353,7 +353,7 @@ select {
   .hero-image::after {
     content: "";
     position: absolute;
-    background-image: url(/images/bg-intro-desktop.svg);
+    background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-desktop.svg);
     width: 125%;
     height: 100%;
     background-size: 150%;
