--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,7 +3,7 @@
 
     &-image {
         position: relative;
-        background-image: url(/images/bg-intro-mobile.svg);
+        background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-mobile.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -12,7 +12,7 @@
         &::before {
             content: '';
             position: absolute;
-            background-image: url(/images/image-mockups.png);
+            background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
             background-position: center bottom 11%;
             background-repeat: no-repeat;
             background-size: 93%;
