--- a/scss/styles.css
+++ b/scss/styles.css
@@ -287,7 +287,7 @@ select {
 }
 .hero-image {
   position: relative;
-  background-image: url(/images/bg-intro-mobile.svg);
+  background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-mobile.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -296,7 +296,7 @@ select {
 .hero-image::before {
   content: "";
   position: absolute;
-  background-image: url(/images/image-mockups.png);
+  background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
   background-position: center bottom 11%;
   background-repeat: no-repeat;
   background-size: 93%;
