--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -17,7 +17,7 @@
         }
     }
 
-    &-socials {
+    &__socials {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -47,7 +47,7 @@
         }
     }
 
-    &-links {
+    &__links {
 
         @include breakpoint-up(large) {
             display: flex;
@@ -76,7 +76,7 @@
         }
     }
 
-    &-cta {
+    &__cta {
         align-items: center;
         gap: 1.5rem;
 
