--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,7 +9,7 @@
         width: 100%;
 
         &.open {
-            .header-links {
+            .header__links {
                 display: flex;
                 gap: 1rem;
                 // visibility: hidden;
