--- a/scss/styles.css
+++ b/scss/styles.css
@@ -204,7 +204,7 @@ select {
   font-size: 0.875rem;
   width: 100%;
 }
-.header nav.open .header-links {
+.header nav.open .header__links {
   display: flex;
   gap: 1rem;
   position: absolute;
@@ -285,7 +285,7 @@ select {
 .hero {
   background-color: hsl(0deg, 0%, 98%);
 }
-.hero-image {
+.hero__image {
   position: relative;
   background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-mobile.svg);
   background-position: center;
@@ -293,7 +293,7 @@ select {
   background-size: cover;
   min-height: 17.5rem;
 }
-.hero-image::before {
+.hero__image::before {
   content: "";
   position: absolute;
   background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
@@ -303,27 +303,27 @@ select {
   height: 100%;
   width: 100%;
 }
-.hero-text {
+.hero__text {
   --flow-space: 1.5rem;
   text-align: center;
   padding: 2.25rem 1.5rem;
 }
-.hero-text h1 {
+.hero__text h1 {
   font-size: 2.25rem;
 }
-.hero-text button {
+.hero__text button {
   margin-top: 2.5rem;
 }
 
 @media (min-width: 40em) {
-  .hero-image {
+  .hero__image {
     min-height: 28.125rem;
     background-position: center 65%;
   }
-  .hero-image::before {
+  .hero__image::before {
     background-size: 55%;
   }
-  .hero-text p {
+  .hero__text p {
     width: 42ch;
     margin-inline: auto;
   }
@@ -333,12 +333,12 @@ select {
     display: flex;
     min-height: 42.5rem;
   }
-  .hero-image {
+  .hero__image {
     order: 2;
     flex: 3;
     background-image: none;
   }
-  .hero-image::before {
+  .hero__image::before {
     content: "";
     position: absolute;
     z-index: 1;
@@ -350,7 +350,7 @@ select {
     width: 120%;
     background-position: 80% 108%;
   }
-  .hero-image::after {
+  .hero__image::after {
     content: "";
     position: absolute;
     background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-desktop.svg);
@@ -359,12 +359,12 @@ select {
     background-size: 150%;
     background-position: 3% 69%;
   }
-  .hero-text {
+  .hero__text {
     flex: 2;
     text-align: left;
     align-self: center;
   }
-  .hero-text h1 {
+  .hero__text h1 {
     font-size: 3.25rem;
   }
 }
@@ -372,10 +372,10 @@ select {
   background-color: hsl(220deg, 16%, 96%);
   text-align: center;
 }
-.features-intro {
+.features__intro {
   margin-bottom: 3.5rem;
 }
-.features-intro h2 {
+.features__intro h2 {
   margin-bottom: 1.25rem;
   font-size: clamp(1.75rem, 3.5vw, 2.25rem);
 }
@@ -385,29 +385,29 @@ select {
 .features .container {
   padding: clamp(4rem, 7vw, 6.875rem) 1.5rem;
 }
-.features-info {
+.features__info {
   flex-direction: column;
   gap: 2rem;
 }
-.features-item {
+.features__item {
   align-items: center;
 }
-.features-item .features-icon {
+.features__item .features-icon {
   margin-bottom: 0.75rem;
 }
-.features-item .features-title {
+.features__item .features-title {
   color: hsl(233deg, 26%, 24%);
   font-weight: 300;
 }
 
 @media (min-width: 40em) {
-  .features-intro p {
+  .features__intro p {
     font-size: 1rem;
   }
-  .features-info {
+  .features__info {
     flex-flow: row wrap;
   }
-  .features-item {
+  .features__item {
     flex-basis: 47%;
   }
 }
@@ -415,26 +415,26 @@ select {
   .features {
     text-align: left;
   }
-  .features-intro {
+  .features__intro {
     margin-bottom: 4.5rem;
   }
-  .features-intro h2 {
+  .features__intro h2 {
     margin-bottom: 2rem;
   }
-  .features-intro p {
+  .features__intro p {
     font-size: 1.125rem;
     width: 60ch;
   }
-  .features-info {
+  .features__info {
     flex-flow: row nowrap;
   }
-  .features-item {
+  .features__item {
     align-items: start;
   }
-  .features-item .features-icon {
+  .features__item .features-icon {
     margin-bottom: 1.5rem;
   }
-  .features-item .features-title {
+  .features__item .features-title {
     font-size: 1.375rem;
   }
 }
@@ -455,52 +455,52 @@ select {
 .articles .container {
   padding: clamp(4rem, 7vw, 6rem) 1.5rem;
 }
-.articles-wrapper {
+.articles__wrapper {
   display: grid;
   gap: 1.5rem;
 }
 @media (min-width: 40em) {
-  .articles-wrapper {
+  .articles__wrapper {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (min-width: 64em) {
-  .articles-wrapper {
+  .articles__wrapper {
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
   }
 }
-.articles-item {
+.articles__item {
   background-color: #FFF;
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 2px 10px lightgray;
   transition: transform 0.15s ease-in-out;
 }
-.articles-item:hover {
+.articles__item:hover {
   transform: scale(1.05);
 }
-.articles-item .articles-image {
+.articles__item .articles__image {
   height: 12rem;
   background-position: center;
   background-size: cover;
 }
-.articles-item .articles-text {
+.articles__item .articles__text {
   --flow-space: .75rem;
   padding: 1.5rem;
 }
-.articles-item .articles-text .articles-author {
+.articles__item .articles__text .articles__author {
   font-size: 0.625rem;
 }
-.articles-item .articles-text .articles-title {
+.articles__item .articles__text .articles__title {
   font-size: 1rem;
   color: hsl(233deg, 26%, 24%);
   transition: color 0.15s ease-in-out;
 }
-.articles-item .articles-text .articles-title:hover {
+.articles__item .articles__text .articles__title:hover {
   color: hsl(136deg, 65%, 51%);
 }
-.articles-item .articles-text p {
+.articles__item .articles__text p {
   font-size: 0.875rem;
 }
 
@@ -522,68 +522,68 @@ select {
     gap: 7.25rem;
   }
 }
-.footer-socials {
+.footer__socials {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 @media (min-width: 64em) {
-  .footer-socials {
+  .footer__socials {
     align-items: start;
     gap: 3rem;
   }
 }
-.footer-socials .logo {
+.footer__socials .logo {
   display: inline-block;
   margin-bottom: 1.5rem;
 }
 @media (min-width: 64em) {
-  .footer-socials .logo {
+  .footer__socials .logo {
     margin-bottom: 0;
   }
 }
-.footer-socials .socials svg path {
+.footer__socials .socials svg path {
   transition: fill 0.15s ease-in-out;
 }
-.footer-socials .socials a:hover svg path {
+.footer__socials .socials a:hover svg path {
   fill: hsl(136deg, 65%, 51%);
 }
 @media (min-width: 64em) {
-  .footer-links {
+  .footer__links {
     display: flex;
     gap: 7.25rem;
   }
 }
-.footer-links div {
+.footer__links div {
   align-items: center;
   gap: 0.5rem;
 }
 @media (min-width: 64em) {
-  .footer-links div {
+  .footer__links div {
     align-items: start;
   }
 }
-.footer-links a {
+.footer__links a {
   font-size: 0.875rem;
   font-weight: 300;
   color: white;
   line-height: 2.25;
   transition: color 0.15s ease-in-out;
 }
-.footer-links a:hover {
+.footer__links a:hover {
   color: hsl(136deg, 65%, 51%);
 }
-.footer-cta {
+.footer__cta {
   align-items: center;
   gap: 1.5rem;
 }
 @media (min-width: 64em) {
-  .footer-cta {
+  .footer__cta {
     margin-left: auto;
     align-items: end;
     gap: 2rem;
   }
 }
-.footer-cta .copyright {
+.footer__cta .copyright {
   font-size: 0.875rem;
 }/*# sourceMappingURL=styles.css.map */
