--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,7 +3,7 @@
 
     &__image {
         position: relative;
-        background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-mobile.svg);
+        background-image: url(/images/bg-intro-mobile.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -12,7 +12,7 @@
         &::before {
             content: '';
             position: absolute;
-            background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
+            background-image: url(/images/image-mockups.png);
             background-position: center bottom 11%;
             background-repeat: no-repeat;
             background-size: 93%;
@@ -72,7 +72,7 @@
                 content: '';
                 position: absolute;
                 z-index: 1;
-                background-image: url(https://any2h.github.io/easybank-landing-page/images/image-mockups.png);
+                background-image: url(/images/image-mockups.png);
                 background-repeat: no-repeat;
                 background-size: 93%;
                 height: 124%;
@@ -88,7 +88,7 @@
             &::after {
                 content: '';
                 position: absolute;
-                background-image: url(https://any2h.github.io/easybank-landing-page/images/bg-intro-desktop.svg);
+                background-image: url(/images/bg-intro-desktop.svg);
                 width: 125%;
                 height: 100%;
                 background-size: 150%;
